# cava_llm_manager

./: .gitignore  CHANGELOG.md  pyproject.toml
notebooks/: load_models.ipynb  updated_pipeline_runner_eg.py
src/cava_llm_manager/: __init__.py  bootstrap.py  logging.py
src/cava_llm_manager/artifacts/models/: gemma3_4b.yaml  llama3_med.yaml  llama_med42.yaml  medembed.yaml  mixtral.yaml  qwen27b_reasoning.yaml  qwen3.5-9b.yaml
src/cava_llm_manager/artifacts/prompts/fewshot/: biomarkers.yaml  genomic.yaml  mutations.yaml
src/cava_llm_manager/artifacts/prompts/system/: biomarkers.py  genomic.py  mutations.py
src/cava_llm_manager/models/: __init__.py  loader.py  metadata.py  registry.py
src/cava_llm_manager/pipelines/: base.py  pipeline_runner.py
src/cava_llm_manager/schemas/: __init__.py  base.py  review.py  soft_enum.py
src/cava_llm_manager/schemas/genomic/: __init__.py  expression.py  mutations.py
src/cava_llm_manager/utils/: config.py  json_utils.py  prompt_utils.py
tests/: test_pipeline_retry_backoff_transport.py  test_pipeline_runner_offline.py  test_prompt_generation.py
